31 October 2010 W. Michael Petullo <mike@flyn.org>

	* Bump version number.

24 October 2010 W. Michael Petullo <mike@flyn.org>

	* Fix _dmap_share_build_filter to support commas in values.

23 October 2010 W. Michael Petullo <mike@flyn.org>

	* Provide a configuration-time warning if libsoup < 2.32; this
	is required to interact with Apple Remote App.

21 October 2010 W. Michael Petullo <mike@flyn.org>

	* Advertise support for dmap.supportsupdate even though we don't
	support it. This should fix DACP interaction with Apple Remote
	v2.0.1 (229). Add real support for dmap.supportsupdate to TODO.

16 October 2010 W. Michael Petullo <mike@flyn.org>

	* Add terminating record to meta_data_map in dpap-share.c.

01 October 2010 W. Michael Petullo <mike@flyn.org>

	* Fix missed "daap.songX" to "songX" change.

29 September 2010 W. Michael Petullo <mike@flyn.org>

	* Fix some bugs related to the recent DmapMdnsPublisher singleton
	change.

09 September 2010 W. Michael Petullo <mike@flyn.org>

	* Allow two sub-DMAP protocols (e.g., DAAP and DPAP) in one
	process.

07 September 2010 W. Michael Petullo <mike@flyn.org>

	* Allow dmap-mdns-*-dnssd.c to compile.

06 September 2010 W. Michael Petullo <mike@flyn.org>

	* Fix serving to iTunes 10.

03 September 2010 W. Michael Petullo <mike@flyn.org>

	* Fix license notice on several source files.

	* Fix license on dacp-player.[ch] after receiving confirmation
	from Alexandre.

	* Fix license on test-dmap-client.c after receiving confirmation
	from Andre.

20 August 2010 W. Michael Petullo <mike@flyn.org>

	* Back out Alexandre's addition of itemid property from
	DAAPRecord. The itemid is the DMAPDb ID.

20 August 2010 Alexandre Rosenfeld <alexandre.rosenfeld@gmail.com>

	* Apply Alexandre Rosenfeld's DACP patch from Google Summer of
	Code 2010.

22 July 2010 W. Michael Petullo <mike@flyn.org>

	* Remove redundancy between dmap_connection_build_message()
	and dmap_connection_build_message().
