@@ -75,7 +75,9 @@ typedef unsigned long long bitwise;
 struct MLCL_Bits {
 	GNode *mlcl;
 	bitwise bits;
-	gpointer pointer;
+	/* FIXME: yuck, used for accumulater: */
+	gpointer user_data1;
+	gpointer user_data2;
 };
 
 typedef enum {
